@@ -1,14 +1,12 @@
 #include <sys/time.h>
-#include <sys/rtc.h>
+#include <propeller.h>
 
 time_t
 time(time_t *tp)
 {
-  struct timeval tv;
   time_t now;
 
-  (*_rtc_gettime)(&tv);
-  now = tv.tv_sec;
+  now = getcnt() / CLKFREQ;
   if (tp)
     *tp = now;
   return now;
